k8s/lab16/nodejs-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
  namespace: ivolve
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      imagePullSecrets:
      - name: docker-cred
      containers:
      - name: nodejs-app
        image: mosayed711/nodejs-app:v2
        volumeMounts:
        - name: app-logs
          mountPath: "/var/log/app"
      tolerations:
      - key: "node"
        operator: "Equal"
        value: "worker"
        effect: "NoSchedule"

      volumes:
      - name: app-logs
        persistentVolumeClaim:
         claimName: app-logs-pvc
