k8s/lab16/nodejs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-ingress
  namespace: ivolve

spec:
  rules:
  - host: nodejs-app.ivolve.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nodejs-service
            port:
              number: 3000
